# rag-practice

./: README.md  pyproject.toml
chroma/c4c97482-b734-42f7-ab80-c95837c95c27/: index_metadata.pickle
src/rag_practice/: chapter5.py  chapter6.py  main.py  test.py
