[project]
name = "rag-practice"
version = "0.1.0"
description = ""
authors = [
    {name = "jgvkmea",email = "kenseito25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-openai (==0.2.0)",
    "langchain-core (==0.3.0)",
    "pydantic (==2.10.6)",
    "langchain-community (==0.3.0)",
    "gitpython (==3.1.43)",
    "langchain-text-splitters (==0.3.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "tavily-python (==0.5.0)",
    "langchain-cohere (==0.3.0)",
    "rank-bm25 (==0.2.2)"
]

[tool.poetry]
packages = [{include = "rag_practice", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
